...
                }
                .accessibility(identifier: "inningStepper")
                if combineStrikesAndFouls() {
                    Stepper(value: $strikes, in: 1...maxStrikesAndFouls()) {
                        Text("Strikes & Fouls: \(strikes)")
                    }
                    .accessibility(identifier: "strikeAndFoulStepper")
                } else {
                    Stepper(value: $strikes, in: 1...maxStrikes()) {
                        Text("Strikes: \(strikes)")
                    }
                    .accessibility(identifier: "strikeStepper")
                    Stepper(value: $fouls, in: 1...maxFouls()) {
...
            Button(action: {
                buildAndUpdateStats()
                self.showEditStats = false
            }, label: {
                Text("Save Stats")
            })
            .accessibility(identifier: "saveStatsButton")
        }
        .onAppear { setInitialStatValues() }
    }
    
    private func setInitialStatValues() {
        let statsCopy = manager.currentStats
...
