...
                        }.padding(.bottom)
                        Button(action: {
                            self.showEditStats = true
                        }, label: {
                            Text("Edit Stats")
                        })
                        .accessibility(identifier: "editStatsButton")
                        
                    }
                    .frame(minWidth: 0, maxWidth: geometry.size.width * 0.7)
                    
                    VStack {
                        Text("Inning")
...
